[gd_scene load_steps=27 format=3 uid="uid://d2hygqwu6wndq"]

[ext_resource type="Script" uid="uid://cnda0noj7ed85" path="res://StateMachine/player.gd" id="1_fkybt"]
[ext_resource type="Texture2D" uid="uid://cn63fuk2ydemu" path="res://Sprites/Ships/Main Ship - Base - Full health.png" id="2_3smsa"]
[ext_resource type="Script" uid="uid://c5j6mfdbyrnfs" path="res://StateMachine/idle_state.gd" id="2_x3wgy"]
[ext_resource type="Script" uid="uid://dra3bkkk38ysf" path="res://StateMachine/moving_state.gd" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://deas85b6jurso" path="res://Sprites/Engines/Main Ship - Engines - Big Pulse Engine.png" id="3_7dp3o"]
[ext_resource type="Texture2D" uid="uid://dbfb2wxi05q01" path="res://Sprites/Engines/Main Ship - Engines - Base Engine.png" id="3_8erm5"]
[ext_resource type="Texture2D" uid="uid://bowpvbqui66em" path="res://Sprites/Engines/Main Ship - Engines - Base Engine - Idle.png" id="3_tx1dd"]
[ext_resource type="Script" uid="uid://brrpxxsfjk3u3" path="res://StateMachine/dashing_state.gd" id="4_8erm5"]
[ext_resource type="Script" uid="uid://dlldd2xthj5ij" path="res://StateMachine/attacking_state.gd" id="5_f1ek2"]
[ext_resource type="Texture2D" uid="uid://d2tnx241ichnv" path="res://Sprites/Engines/Main Ship - Engines - Base Engine - Powering.png" id="5_gymyn"]
[ext_resource type="Texture2D" uid="uid://cdl7eq8o07xf0" path="res://Sprites/Weapons/Main Ship - Weapons - Auto Cannon.png" id="6_gymyn"]
[ext_resource type="Script" uid="uid://ipsirgn5x0f8" path="res://Scripts/state_label.gd" id="7_3smsa"]
[ext_resource type="PackedScene" uid="uid://l1h7djbo82pr" path="res://Scenes/player_ui.tscn" id="12_pu2lt"]
[ext_resource type="Script" uid="uid://bvdp0k5y08o7e" path="res://Scripts/label.gd" id="13_ukyrk"]

[sub_resource type="Animation" id="Animation_fd4e3"]
resource_name = "Base_Engine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_8erm5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qqcod"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_8erm5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_igrcy"]
resource_name = "Big_Pulse_Engine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7dp3o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fs7ks"]
_data = {
&"Base_Engine": SubResource("Animation_fd4e3"),
&"Big_Pulse_Engine": SubResource("Animation_igrcy"),
&"RESET": SubResource("Animation_qqcod")
}

[sub_resource type="Animation" id="Animation_gymyn"]
resource_name = "Auto_Cannon"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gymyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Attacking_State")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"shoot_left"
}, {
"args": [],
"method": &"shoot_right"
}, {
"args": [],
"method": &"attack_finished"
}]
}

[sub_resource type="Animation" id="Animation_h4iuc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_gymyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fd4e3"]
_data = {
&"Auto_Cannon": SubResource("Animation_gymyn"),
&"RESET": SubResource("Animation_h4iuc")
}

[sub_resource type="Animation" id="Animation_pu2lt"]
resource_name = "Base_Engine_Idle"
length = 0.6
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EngineEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tx1dd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EngineEffect:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EngineEffect:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EngineEffect:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_7dp3o"]
resource_name = "Base_Engine_Powering"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EngineEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_gymyn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EngineEffect:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EngineEffect:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EngineEffect:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_ukyrk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EngineEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_tx1dd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EngineEffect:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EngineEffect:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EngineEffect:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h4iuc"]
_data = {
&"Base_Engine_Idle": SubResource("Animation_pu2lt"),
&"Base_Engine_Powering": SubResource("Animation_7dp3o"),
&"RESET": SubResource("Animation_ukyrk")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3smsa"]
radius = 5.0
height = 22.0

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_fkybt")

[node name="Engine" type="Sprite2D" parent="."]
position = Vector2(-2, 0)
rotation = 1.5708
texture = ExtResource("3_8erm5")

[node name="EngineType" type="AnimationPlayer" parent="Engine"]
libraries = {
&"": SubResource("AnimationLibrary_fs7ks")
}

[node name="Weapon" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("6_gymyn")
hframes = 7

[node name="WeaponAnimation" type="AnimationPlayer" parent="Weapon"]
libraries = {
&"": SubResource("AnimationLibrary_fd4e3")
}

[node name="LeftMarker" type="Marker2D" parent="Weapon"]
position = Vector2(-9, -7)
rotation = -1.5708

[node name="RightMarker" type="Marker2D" parent="Weapon"]
position = Vector2(9, -7)

[node name="Ship" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_3smsa")

[node name="EngineEffect" type="Sprite2D" parent="."]
position = Vector2(-4, 4.54747e-13)
rotation = 1.5708
texture = ExtResource("3_tx1dd")
hframes = 3

[node name="EngineEffectAnimation" type="AnimationPlayer" parent="EngineEffect"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_h4iuc")
}
autoplay = "Base_Engine_Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3smsa")

[node name="Idle_State" type="Node" parent="."]
script = ExtResource("2_x3wgy")

[node name="Moving_State" type="Node" parent="."]
script = ExtResource("3_3smsa")

[node name="Dashing_State" type="Node" parent="."]
script = ExtResource("4_8erm5")

[node name="Attacking_State" type="Node" parent="."]
script = ExtResource("5_f1ek2")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_UI" parent="CanvasLayer" instance=ExtResource("12_pu2lt")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="STATE" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("7_3smsa")

[node name="FPS COUNTER" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
script = ExtResource("13_ukyrk")
